<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RockPaperScissors</string>
    <string name="RPS">Rock Paper Scissors</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="unameHint">Enter Username</string>
    <string name="ageHint">Enter Age</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="total_games">Total Games:</string>
    <string name="wins">You Won:</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="now_connected">You are now connected, Start Playing</string>
    <string name="opponent_cancelled">Opponent cancelled. disconnecting...</string>
    <string name="opponent_played">Opponent played , Waiting for your move</string>
    <string name="start_playing">Start Playing</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>

</resources>
