<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    android:id="@+id/myActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtUsername"
        android:layout_toEndOf="@+id/lblUname"
        android:layout_marginTop="63dp"
        android:width="200dp"
        android:text="@string/unameHint"
        android:focusable="true"
        android:layout_below="@+id/titleImage"
        android:layout_alignLeft="@+id/radioGroup"
        android:layout_alignStart="@+id/radioGroup"
        android:layout_alignRight="@+id/tableRow"
        android:layout_alignEnd="@+id/tableRow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/age"
        android:id="@+id/lblAge"
        android:layout_alignBaseline="@+id/txtAge"
        android:layout_alignBottom="@+id/txtAge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username"
        android:id="@+id/lblUname"
        android:layout_alignBottom="@+id/txtUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/gender"
        android:id="@+id/lblGender"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/txtAge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtAge"
        android:layout_toEndOf="@+id/lblUname"
        android:text="@string/ageHint"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/txtUsername"
        android:layout_alignLeft="@+id/txtUsername"
        android:layout_alignStart="@+id/txtUsername" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblGender"
        android:layout_centerHorizontal="true"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:id="@+id/rdbMale"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/rdbFemale"
            android:layout_gravity="right"
            android:checked="false" />

    </RadioGroup>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:id="@+id/tableRow">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btnLogin"
            android:layout_toStartOf="@+id/txtAge"
            android:layout_toEndOf="@+id/lblAge"
            android:layout_alignParentBottom="true"
            android:layout_weight="0.94" />

        <Button
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btnCancel"
            android:layout_toEndOf="@+id/txtHello"
            android:layout_alignTop="@+id/btnLogin"
            android:layout_alignParentEnd="true" />
    </TableRow>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleImage"
        android:src="@drawable/rps"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/txtAge"
        android:layout_alignEnd="@+id/txtAge" />


</RelativeLayout>
